--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,16 +18,30 @@ spring.http.multipart.max-file-size:10MB
 spring.http.multipart.max-request-size:10MB
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto:create-drop
+spring.jpa.hibernate.ddl-auto:update
 
 # Oracle settings
-spring.datasource.url:jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username:bishwa
-spring.datasource.password:bishwa
-spring.datasource.driver-class:oracle.jdbc.driver.OracleDriver
+#spring.datasource.url:jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username:bishwa
+#spring.datasource.password:bishwa
+#spring.datasource.driver-class:oracle.jdbc.driver.OracleDriver
+ 
+ # Database
+db.driver: oracle.jdbc.driver.OracleDriver
+db.url: jdbc:oracle:thin:@localhost:1521:xe
+db.username: bishwa
+db.password: bishwa
+ 
+ 
+# Hibernate
+hibernate.dialect: org.hibernate.dialect.OracleDialect
+hibernate.show_sql: true
+hibernate.hbm2ddl.auto: update
+entitymanager.packagesToScan: com.as
+
 
 # HikariCP settings
 # spring.datasource.hikari.*
 
-spring.datasource.hikari.connection-timeout:60000
-spring.datasource.hikari.maximum-pool-size:5
+#spring.datasource.hikari.connection-timeout:60000
+#spring.datasource.hikari.maximum-pool-size:5
