--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.as</groupId>
 	<artifactId>StartUp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>StartUp</name>
 	<description>Demo project for Spring Boot</description>
@@ -23,7 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<!-- The main class to start by executing java -jar -->
-        <start-class>com.spring.demo.SpringBootApApplication</start-class>
+        <start-class>com.as.PeopleManagementApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -75,12 +75,7 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
         </dependency>
-        <!-- Either thymeleaf or mustache should be used -->
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mustache</artifactId>
-		</dependency> -->
-		
+    
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -123,12 +118,7 @@
             <version>12.1.0.1</version>
         </dependency>
 
-        <!-- HikariCP connection pool -->
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>2.6.0</version>
-        </dependency>
+ 
 		
 	</dependencies>
 
@@ -137,11 +127,7 @@
 		<!-- Package as an executable jar/war -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<!-- Uncomment In case Multiple main classes are there in the application -->
-				<!-- <configuration>
-				<mainClass>com.spring.demo.SpringBootApApplication</mainClass>
-				</configuration> -->
+				<artifactId>spring-boot-maven-plugin</artifactId>			 
 			</plugin>
 		</plugins>
 	</build>
