--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.http.multipart.max-file-size:10MB
 spring.http.multipart.max-request-size:10MB
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto:update
+spring.jpa.hibernate.ddl-auto:validate
 
 # Oracle settings
 #spring.datasource.url:jdbc:oracle:thin:@localhost:1521:xe
@@ -36,7 +36,7 @@ db.password: bishwa
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.OracleDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
+hibernate.hbm2ddl.auto: validate
 entitymanager.packagesToScan: com.as
 
 
